Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-46130

QSystemTrayIcon's window does not send QHelpEvent of type QEvent::ToolTip to QSystemTrayIcon object class.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.6.0
    • 5.4.1
    • QPA: X11/XCB
    • None
    • ArchLinux
    • acc3df2c4e65fac822fc0f69d9849f1996130741

      QSystemTrayIcon's window should send QEvent::ToolTip to QSystemTrayIcon main class. I even know what you need to change:

      bool QSystemTrayIconSys::event(QEvent *e)
      {
          switch (e->type()) {
      +   case QEvent::Tooltip:
      #ifndef QT_NO_WHEELEVENT
          case QEvent::Wheel:
      -        return QApplication::sendEvent(q, e);
      #endif
      +     return QApplication::sendEvent(q, e);
          default:
              break;
          }
          return QWidget::event(e);
      }
      

      It works on qt4 and it is because your help page contains the words below:

      Only on X11, when a tooltip is requested, the QSystemTrayIcon receives a QHelpEvent of type QEvent::ToolTip.

      then it should work on qt5 also.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            srutledg Shawn Rutledge
            __AlexL__ Alex Levkovich
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes